task5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task5
  template:
    metadata:
      labels:
        app: task5
    spec:
      containers:
      - name: task5
        image: task5-image:v1
        ports:
        - containerPort: 5000
