task5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task5-service
spec:
  selector:
    app: task5
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
