task5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task5-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: task5.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task5-service
            port:
              number: 80
